--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,24 @@ html, body, .root {
 
 body {
   line-height: 1.5;
+  background-color:#EEEFDF;
 }
 
-body, .app {
-  background: white;
+.app {
+  background-color:#EEEFDF;
+
 }
+.dark{
+  background-color: darkslategrey;
+}
+
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background-color: #080100;
+  background-image: url("https://www.transparenttextures.com/patterns/wood-pattern.png");
   text-align: center;
 }
 
@@ -59,6 +66,7 @@ body, .app {
   height: 50px;
   border-radius: 50%;
   background: #2e7d32;
+  cursor: pointer;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -69,7 +77,7 @@ body, .app {
 }
 
 .open-search button:hover {
-  background-color: rgb(0, 102, 0);
+  background-color: #778f0de1;
 }
 
 
@@ -111,6 +119,7 @@ body, .app {
   font-size: 0;
   border: none;
   outline: none;
+  cursor: pointer;
 }
 
 button:active {
@@ -169,7 +178,7 @@ button:active {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
+  background-color: hsla(44, 75%, 37%, 0.8);
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
